# modelt

./: .gitignore  404.html  README.md  index.html  index.md  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: index.md
search/: search_index.json
src/: config.cfg  install_docker.sh  setup.sh
src/ingestion/: setup.sh
src/ingestion/airbyte/: setup.sh
src/transform/: setup.sh
src/transform/dbt/: setup.sh
src/workflow/: setup.sh
src/workflow/airflow/: .env  setup.sh
